--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -13,6 +13,12 @@ body {
     margin: 3em;
     border-radius: 60px;
 }
+h1 {
+    padding: 60px;
+    text-align: center;
+    margin: 3em;
+    border-radius: 60px;
+}   
 
 article {
     border: 1px solid gray;
