--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -8,10 +8,9 @@
 }
 
 body {
-    padding: 60px;
-    text-align: center;
-    margin: 3em;
-    border-radius: 60px;
+    padding: 0px;
+    margin: 0px;
+}
 
 article {
     border: 1px solid gray;
@@ -91,8 +90,4 @@ h1 {
     color: red;
     text-align: center;
     background-color: gray;
-    padding: 100px;
-    text-align: center;
-    margin: 3em;
-    border-radius: 60px;
 }
