--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -38,13 +38,12 @@ footer {
 }
 
 header {
-    padding: 200px;
-    margin: 0px;
+    
     border: 3px solid #F6B018;
     background-color: #0E3D65;
     font-family: sans-serif;
     height: 120px;
-    padding: 0;
+    padding: 2em;
 }
 
 header * {
