--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -9,7 +9,7 @@
 
 body {
     padding: 0px;
-    margin: 2em;
+    margin: 0px;
 }
 
 article {
@@ -38,12 +38,15 @@ footer {
 }
 
 header {
-    
-    border: 10px solid #F6B018;
-    background-color: #0E3D65;
-    font-family: sans-serif;
-    height: 120px;
-    padding: 2em;
+
+    margin: 2em;
+    padding: 40px;
+    text-align: center;
+    font: 400% cursive;
+    color: yellow;
+    border: 1px solid gray;
+    background-color: blue;
+    border-radius: 60px;
 }
 
 header * {
