--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -8,8 +8,15 @@
 }
 
 body {
-    padding: 0px;
-    margin: 0px;
+
+    margin: 2em;
+    padding: 40px;
+    text-align: center;
+    font: 200% cursive;
+    color: yellow;
+    border: 1px solid gray;
+    background-color: blue;
+    border-radius: 60px;
 }
 
 article {
