--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -12,10 +12,9 @@ body {
     margin: 2em;
     padding: 40px;
     text-align: center;
-    font: 200% cursive;
     color: yellow;
     border: 1px solid gray;
-    background-color: blue;
+    background-color: gray;
     border-radius: 60px;
 }
 
