--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -49,9 +49,9 @@ header {
     padding: 40px;
     text-align: center;
     font: 200% cursive;
-    color: yellow;
+    color: brown;
     border: 1px solid gray;
-    background-color: blue;
+    background-color: tan;
     border-radius: 60px;
 }
 
