--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -20,7 +20,7 @@ body {
 
 article {
     border: 1px solid gray;
-    box-shadow: 2px 2px 5px gray;
+    box-shadow: 2px 2px 5px blue;
     margin: 3em;
     padding: 1em;
 }
