--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -21,7 +21,7 @@ article {
 
 aside {
     background-color: gray;
-    text-align: center;
+    text-align: left;
     font-size: 50px;
     font-family: sans-serif;
     color: white;
