--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -12,7 +12,7 @@ body {
     padding: 40px;
     text-align: center;
     color: yellow;
-    border: 1px solid gray;
+    border: 1px solid black;
     background-color: gray;
     border-radius: 60px;
 }
