--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -47,7 +47,7 @@ header {
     margin: 2em;
     padding: 40px;
     text-align: center;
-    font: 200% cursive;
+    font: 200% "Brush Script MT", Cursive;
     color: brown;
     background-color: tan;
     border-radius: 60px;
