--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -48,7 +48,7 @@ header {
     padding: 40px;
     text-align: center;
     font: 200% "Brush Script MT", Cursive;
-    color: brown;
+    color: Dark brown;
     background-color: tan;
     border-radius: 60px;
     border: 3px solid black;
