--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -31,7 +31,7 @@ aside {
     font-family: sans-serif;
     color: white;
     border: 2px solid red;
-    float: right;
+    float: center;
     width: 30%;
 }
 
