--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -10,7 +10,7 @@ body {
 
     margin: 2em;
     padding: 40px;
-    text-align: center;
+    text-align: left;
     color: yellow;
     border: 1px solid black;
     background-color: gray;
