--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -11,14 +11,14 @@ body {
     margin: 2em;
     padding: 40px;
     text-align: left;
-    color: yellow;
+    color: tan;
     border: 1px solid black;
     background-color: gray;
     border-radius: 60px;
 }
 
 article {
-    border: 1px solid gray;
+    border-style: inset red    
     box-shadow: 2px 2px 5px blue;
     margin: 3em;
     padding: 1em;
