--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -26,7 +26,7 @@ article {
 
 aside {
     background-color: gray;
-    text-align: left;
+    text-align: right;
     font-size: 50px;
     font-family: sans-serif;
     color: white;
