--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -1,37 +1,32 @@
 /* ----------------------------------------------- */
 /* HTML Elements */
-}
 
 * {
-    color: blue;
+    padding: 0px;
+    margin: 10px;
+    color: #0E3D65;
 }
 
 body {
-
-    margin: 2em;
-    padding: 20px;
-    text-align: left;
-    color: tan;
-    border: 1px solid black;
-    background-color: gray;
-    border-radius: 60px;
+    padding: 0px;
+    margin: 0px;
 }
 
 article {
-    border-style: inset red    
-    box-shadow: 2px 2px 5px blue;
+    border: 1px solid gray;
+    box-shadow: 2px 2px 5px gray;
     margin: 3em;
     padding: 1em;
 }
 
 aside {
     background-color: gray;
-    text-align: right;
+    text-align: center;
     font-size: 50px;
     font-family: sans-serif;
     color: white;
     border: 2px solid red;
-    float: center;
+    float: right;
     width: 30%;
 }
 
@@ -41,29 +36,27 @@ footer {
     margin: 2em;
     padding: 2em;
 }
-header {
 
-    margin: 2em;
-    padding: 40px;
-    text-align: center;
-    font: 200% "Brush Script MT", Cursive;
-    color: black;
-    background-color: tan;
-    border-radius: 60px;
-    border: 3px solid black;
+header {
+    border: 3px solid #F6B018;
+    background-color: #0E3D65;
+    font-family: sans-serif;
+    height: 120px;
+    padding: 0;
+}
+
+header * {
+    color: #F6B018;
+}
 
 hr {
-    padding: 20px;
-    border: 4px solid pink;
-    font: 20% cursive;
-    color: brown;
+    padding: 0px;
+    border: 4px solid #F6B018;
 }
 
 li {
     margin: 5px 3em;
     padding: 0px;
-    font: 20% cursive;
-    color: brown;
 }
 
 /* ----------------------------------------------- */
