--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -57,6 +57,7 @@ hr {
 li {
     margin: 5px 3em;
     padding: 0px;
+    text-align: left;
 }
 
 /* ----------------------------------------------- */
