--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -38,7 +38,7 @@ footer {
 }
 
 header {
-    border: 3px solid #F6B018;
+    border-radius: 20px;
     background-color: #0E3D65;
     font-family: sans-serif;
     height: 120px;
