--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -27,7 +27,7 @@ aside {
     color: white;
     border: 2px solid red;
     float: right;
-    width: 30%;
+    width: 50%;
 }
 
 footer {
@@ -39,10 +39,11 @@ footer {
 
 header {
     border-radius: 50px;
+    border: 3px solid white;
     background-color: #0E3D65;
     font-family: sans-serif;
     height: 120px;
-    padding: 0;
+    padding: 65px;
 }
 
 header * {
