--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -53,12 +53,14 @@ header * {
 hr {
     padding: 0px;
     border: 4px solid #F6B018;
+    font-size: 50px;
 }
 
 li {
     margin: 5px 3em;
     padding: 0px;
     text-align: left;
+    font-size: 20px;
 }
 
 /* ----------------------------------------------- */
