--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -8,8 +8,11 @@
 }
 
 body {
-    padding: 0px;
-    margin: 0px;
+    border-radius: 50px;
+    border: 3px solid white;
+    background-color: #0E3D65;
+    font-family: sans-serif;
+
 }
 
 article {
