--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -8,10 +8,8 @@
 }
 
 body {
-    border-radius: 50px;
-    border: 3px solid white;
-    background-color: #0E3D65;
-    font-family: sans-serif;
+    padding: 0px;
+    margin: 0px;
 
 }
 
@@ -63,7 +61,7 @@ li {
     margin: 5px 3em;
     padding: 0px;
     text-align: left;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 /* ----------------------------------------------- */
