--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -36,6 +36,9 @@ footer {
     text-align: center;
     margin: 2em;
     padding: 2em;
+    font-size: 50px;
+    font-family: sans-serif;
+    color: white;
 }
 
 header {
@@ -61,7 +64,9 @@ li {
     margin: 5px 3em;
     padding: 0px;
     text-align: left;
-    font-size: 30px;
+    font-size: 40px;
+    font-family: sans-serif;
+    color: blue;
 }
 
 /* ----------------------------------------------- */
