--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -81,7 +81,7 @@ li {
     width: 80px;
     float: right;
     background-color: white;
-    box-shadow: 2px 2px 5px gray;
+    box-shadow: 2px 2px 5px pink;
     border-radius: 5px;
     border: 1px solid white;
     padding: 0;
