--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -24,7 +24,7 @@ aside {
     background-color: gray;
     text-align: center;
     font-size: 50px;
-    font-family: sans-serif;
+    font-family: Marker Felt, fantasy;
     color: white;
     border: 2px solid red;
     float: right;
@@ -33,7 +33,7 @@ aside {
 
 h2 {    
     font-size: 40px;
-    font-family: sans-serif;
+    font-family: Marker Felt, fantasy;
     color: blue;
     
 }    
@@ -70,7 +70,7 @@ li {
     padding: 0px;
     text-align: left;
     font-size: 40px;
-    font-family: sans-serif;
+    font-family: Marker Felt, fantasy;
     color: blue;
 }
 
