--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -56,14 +56,22 @@ header {
 }
 
 h1 {    
-    font-size: 40px;
+    font-size: 80px;
     font-family: Coronetscript, cursive;
     color: blue;
     
 }    
 
+h2 {    
+    font-size: 50px;
+    font-family: Coronetscript, cursive;
+    color: blue;
+    
+}    
+
+
 header * {
-    color: #F6B018;
+    color: red;
 }
 
 hr {
