--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -92,6 +92,9 @@ li {
     color: blue;
 }
 
+img {
+    border-style: inset;
+}
 /* ----------------------------------------------- */
 /* Classes */
 
