--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -53,7 +53,7 @@ header {
     border: 3px solid white;
     background-color: #0E3D65;
     font-family: sans-serif;
-    text-align: left;
+    text-align: center;
     height: 120px;
     padding: 65px;
 }
