--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -11,7 +11,7 @@ body {
     padding: 0px;
     margin: 0px;
     border-radius: 50px;
-    background-color: blue;
+    background-color: black;
 
 }
 
