--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -9,7 +9,7 @@
 
 body {
     padding: 0px;
-    margin: 0px;
+    margin: 100px;
     border-radius: 50px;
     background-color: black;
 
@@ -26,16 +26,17 @@ aside {
     background-color: gray;
     text-align: center;
     font-size: 50px;
-    font-family: Coronetscript, cursive;
+    font-family:Serif, Goudy Old Style;
     color: white;
-    border: 2px solid red;
+    border: 4px solid red;
+    border-style: inset;
     float: right;
     width: 50%;
 }
 
 h2 {    
     font-size: 40px;
-    font-family: Coronetscript, cursive;
+    font-family:Serif, Goudy Old Style;
     color: blue;
     
 }    
@@ -60,14 +61,14 @@ header {
 
 h1 {    
     font-size: 80px;
-    font-family: Coronetscript, cursive;
+    font-family:Serif, Goudy Old Style;
     color: blue;
     
 }    
 
 h2 {    
     font-size: 50px;
-    font-family: Coronetscript, cursive;
+    font-family:Serif, Goudy Old Style;
     color: blue;
     
 }    
@@ -88,12 +89,14 @@ li {
     padding: 0px;
     text-align: left;
     font-size: 40px;
-    font-family: Coronetscript, cursive;
+    font-family: Serif, Goudy Old Style;
     color: blue;
 }
 
 img {
     border-style: inset;
+    border: 4px solid red;
+
 }
 /* ----------------------------------------------- */
 /* Classes */
