--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -52,7 +52,7 @@ footer {
 header {
     border-radius: 50px;
     border: 3px solid white;
-    background-color: #0E3D65;
+    background-color: rgb(90, 90, 90);
     font-family: sans-serif;
     text-align: center;
     height: 130px;
@@ -90,7 +90,7 @@ li {
     text-align: left;
     font-size: 40px;
     font-family: Serif, Goudy Old Style;
-    color: blue;
+    color: white;
 }
 
 img {
