--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -11,7 +11,7 @@ body {
     padding: 0px;
     margin: 100px;
     border-radius: 50px;
-    background-image: "korriban.jpg"
+    background-image: url("khttps://c4.wallpaperflare.com/wallpaper/162/878/386/star-wars-brown-stars-the-old-republic-wallpaper-preview.jpg")
 
 }
 
