--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -11,7 +11,7 @@ body {
     padding: 0px;
     margin: 100px;
     border-radius: 50px;
-    background-image: url("khttps://c4.wallpaperflare.com/wallpaper/162/878/386/star-wars-brown-stars-the-old-republic-wallpaper-preview.jpg")
+    background-image: url("korriban.jpg")
 
 }
 
@@ -26,7 +26,7 @@ aside {
     background-color: gray;
     text-align: center;
     font-size: 50px;
-    font-family:Serif, Goudy Old Style;
+    font-family:Serif, Rockwell Extra Bold;
     color: white;
     border: 4px solid red;
     border-style: inset;
@@ -36,7 +36,7 @@ aside {
 
 h2 {    
     font-size: 40px;
-    font-family:Serif, Goudy Old Style;
+    font-family:Serif, Rockwell Extra Bold;
     color: blue;
     
 }    
@@ -61,14 +61,14 @@ header {
 
 h1 {    
     font-size: 50px;
-    font-family:Serif, Goudy Old Style;
+    font-family:Serif, Rockwell Extra Bold;
     color: blue;
     
 }    
 
 h2 {    
     font-size: 50px;
-    font-family:Serif, Goudy Old Style;
+    font-family:Serif, Rockwell Extra Bold;
     color: blue;
     
 }    
@@ -90,7 +90,7 @@ li {
     padding: 0px;
     text-align: left;
     font-size: 40px;
-    font-family: Serif, Goudy Old Style;
+    font-family: Serif, Rockwell Extra Bold;
     color: white;
 }
 
