--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -36,8 +36,8 @@ aside {
 
 h2 {    
     font-size: 40px;
-    font-family:Serif, Rockwell Extra Bold;
-    color: blue;
+    font-family: Fantasy, Papyrus;
+    color: white;
     
 }    
 
@@ -90,7 +90,7 @@ li {
     padding: 0px;
     text-align: left;
     font-size: 40px;
-    font-family: Serif, Rockwell Extra Bold;
+    font-family: Fantasy, Papyrus;
     color: white;
 }
 
