--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -30,6 +30,7 @@ aside {
     color: white;
     border: 4px solid red;
     border-style: inset;
+    border-radius: 50px;
     float: right;
     width: 50%;
 }
