--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -63,14 +63,14 @@ header {
 h1 {    
     font-size: 50px;
     font-family:Serif, Rockwell Extra Bold;
-    color: blue;
+    color: pink;
     
 }    
 
 h2 {    
     font-size: 50px;
     font-family:Serif, Rockwell Extra Bold;
-    color: blue;
+    color: green;
     
 }    
 
