--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -64,14 +64,13 @@ h1 {
     font-size: 50px;
     font-family:Serif, Rockwell Extra Bold;
     color: pink;
-    
+    padding: 20px;
 }    
 
 h2 {    
     font-size: 50px;
     font-family:Serif, Rockwell Extra Bold;
     color: green;
-    
 }    
 
 
