--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -52,6 +52,7 @@ footer {
 header {
     border-radius: 50px;
     border: 10px solid white;
+    outline-style: outset;
     background-color: rgb(90, 90, 90);
     font-family: sans-serif;
     text-align: center;
