--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -56,13 +56,14 @@ header {
     background-color: rgb(90, 90, 90);
     font-family: sans-serif;
     text-align: center;
-    height: 120px;
+    height: 130px;
     padding: 20px;
 }
 
 h1 {    
     font-size: 80px;
     font-family:Serif, Rockwell Extra Bold;
+    text-shadow: 2px 2px;
     color: pink;
     padding: 0px;
 }    
